--- a/.github/workflows/build-release-version.yml
+++ b/.github/workflows/build-release-version.yml
@@ -27,7 +27,7 @@ env:
   TF_VAR_api_key: ${{ secrets.LIVE_API_KEY }}
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-  TF_VAR_discord_webhook_url: ${{ secrets.DISCORD_ALERTS_WEBHOOK_URL}}
+  TF_VAR_slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
 jobs:
   release:
     name: Release packages
