--- a/.github/workflows/build-prerelease-version.yml
+++ b/.github/workflows/build-prerelease-version.yml
@@ -11,7 +11,7 @@ env:
   TF_VAR_env_vars: ${{ secrets.LIVE_ENV_VARS }}
   TF_VAR_zone_id: ${{ secrets.LIVE_ZONE_ID }}
   TF_VAR_root_domain: lhowsam.com
-  TF_VAR_sub_domain: eas.lhowsam.com
+  TF_VAR_sub_domain: slack-notifier.lhowsam.com
   TF_VAR_private_key: ${{ secrets.STAGING_PRIVATE_KEY }}
   TF_VAR_certificate_body: ${{ secrets.STAGING_CERTIFICATE_BODY }}
   TF_VAR_certificate_chain: ${{ secrets.STAGING_CERTIFICATE_CHAIN }}
