--- a/.github/workflows/build-release-version.yml
+++ b/.github/workflows/build-release-version.yml
@@ -13,12 +13,10 @@ permissions:
   pull-requests: write
 
 env:
-  # terraform variables; TODO: move to secretmanager
   TF_VAR_env: live
-  TF_VAR_env_vars: ${{ secrets.LIVE_ENV_VARS }}
   TF_VAR_zone_id: ${{ secrets.LIVE_ZONE_ID }}
   TF_VAR_root_domain: lhowsam.com
-  TF_VAR_sub_domain: eas.lhowsam.com
+  TF_VAR_sub_domain: slack-notifier.lhowsam.com
   TF_VAR_private_key: ${{ secrets.LIVE_PRIVATE_KEY }}
   TF_VAR_certificate_body: ${{ secrets.LIVE_CERTIFICATE_BODY }}
   TF_VAR_certificate_chain: ${{ secrets.LIVE_CERTIFICATE_CHAIN }}
